[Bug fix] Corrected spacing issue with new radio/checkbox inputs.

--- a/style/style-shared.css
+++ b/style/style-shared.css
@@ -714,6 +714,7 @@ input {
 	min-width: 0 !important;
 	opacity: 0;
 	overflow: hidden;
+	position: absolute;
 	width: 0;
 }
 .input__radio {
@@ -738,6 +739,7 @@ input {
 	background-size: 100%;
 	box-shadow: inset 0 0 0 1px hsl(var(--background--bold));
 	display: flex;
+	margin-top: 0.5rem;
 }
 .input__radio::before,
 .input__radio > [class*="symbol"]:first-of-type::before,
